<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_not_found">Gambar tidak ditemukan</string>
    <string name="image_classifier_failed">Image classifier gagal diinisialisasi</string>
    <string name="something_went_wrong">Terjadi kesalahan</string>
    <string name="news_card">News Card</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="date">12 Aug 2022</string>
    <string name="no_internet">Tidak ada jaringan</string>
    <string name="headline_news">Headline News</string>
    <string name="scan_cancer">Scan Cancer</string>
    <string name="back">Kembali</string>
    <string name="save_result">Simpan Hasil</string>
    <string name="save_result_success">Berhasil menyimpan hasil</string>
    <string name="classification_history">Riwayat Klasifikasi</string>
    <string name="history">History</string>
    <string name="result_card">Result Card</string>
    <string name="no_history">Data history masih kosong</string>
</resources>