<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Elevated"
    android:backgroundTint="@color/cardview_light_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:contentDescription="@string/news_card"
    android:focusable="true"
    app:contentPadding="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivResult"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_place_holder" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvResult"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvResultTitle"
                style="@style/Nunito.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvResultDesc"
                style="@style/Nunito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvResultDate"
                style="@style/Poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/date"
                android:textSize="12sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>